# cowin-notify

./: .sample-env  README.md  app.py  pyproject.toml  requirements.txt  utils.py
datasets/: districts.json
templates/: base.html  email.html
